# SimpleDB

./: .gitignore  CMakeLists.txt  main.cpp
drawio/: .$Classes.drawio.bkp  Classes.drawio
include/: DatabaseEngine.hpp
include/query/: AlterTableQueryBuilder.hpp  Query.hpp  QueryParser.hpp  QueryResult.hpp  SelectQueryBuilder.hpp
include/storage/: Column.hpp  Database.hpp  Index.hpp  IndexManager.hpp  Record.hpp  Table.hpp
include/transaction/: Transaction.hpp
include/utils/: Condition.hpp  Logger.hpp  TypeClassifier.hpp
src/: CMakeLists.txt  DatabaseEngine.cpp
src/query/: AlterTableQueryBuilder.cpp  Query.cpp  QueryParser.cpp  QueryResult.cpp  SelectQueryBuilder.cpp
src/storage/: Column.cpp  Database.cpp  Index.cpp  IndexManager.cpp  Record.cpp  Table.cpp
src/transaction/: Transaction.cpp
src/utils/: Condition.cpp  Logger.cpp  TypeClassifier.cpp
testbd/: in.json  out.json
tests/: test.hpp
